--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <app-inline-style></app-inline-style>
   <!--noscript>Please enable JavaScript to continue using this application.</noscript-->
 </body>
 </html>
