--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="REMOJU">
     <meta name="google-site-verification" content="iWRnQS517K5JkGjblw9h-uDzgnqxYRTyvR7dTFmaXJo"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -20,10 +21,10 @@
     <meta name="theme-color" content="#1976d2"/>
 
     <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
-    <script defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLOda6eH_CRFBbZbdnpvPGDaHieIVa5RE&amp;libraries=places"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLOda6eH_CRFBbZbdnpvPGDaHieIVa5RE&amp;libraries=places"></script>
     <link rel="manifest" href="manifest.webmanifest">
 
-    <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
+    <script async defer src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
     integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
     crossorigin="anonymous"></script>
   <meta name="theme-color" content="#1976d2">
