--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,18 @@
     <meta name="google-site-verification" content="iWRnQS517K5JkGjblw9h-uDzgnqxYRTyvR7dTFmaXJo"/>
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <!--
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" rel="stylesheet"/>
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" rel="stylesheet"/>  
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-
+    -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet"/>
+    
     <meta name="theme-color" content="#1976d2"/>
 
-    <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/exif-js"></script> -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLOda6eH_CRFBbZbdnpvPGDaHieIVa5RE&amp;libraries=places"></script>
     <link rel="manifest" href="manifest.webmanifest">
 
