--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" rel="stylesheet"/>  
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+
+    <script async defer src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet"/>
-    
     <meta name="theme-color" content="#1976d2"/>
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/exif-js"></script> -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLOda6eH_CRFBbZbdnpvPGDaHieIVa5RE&amp;libraries=places"></script>
     <link rel="manifest" href="manifest.webmanifest">
-
     <script async defer src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
     integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
     crossorigin="anonymous"></script>
