REMOJU-477 Google Analytics設定

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,16 @@
     <script async defer src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
     integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
     crossorigin="anonymous"></script>
-  <meta name="theme-color" content="#1976d2">
+    <meta name="theme-color" content="#1976d2">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WD8D3WTZS4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WD8D3WTZS4');
+    </script>
 </head>
 
   <body id="body">
