remove inline style

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
       <div class="loader"></div>
       <span class="loader-text">Loading...</span>
     </app-root>
-    <app-inline-style></app-inline-style>
+    <!-- <app-inline-style></app-inline-style> -->
     <noscript>Please enable JavaScript to continue using this application.</noscript>
   </body>
 </html>
