--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,8 @@
           margin-top: 1em;
         }
       </style>
-      <div class="loader"></div>
-      <span class="loader-text">Loading...</span>
+      <!-- <div class="loader"></div>
+      <span class="loader-text">Loading...</span> -->
     </app-root>
     <app-inline-style></app-inline-style>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
