--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>RemojuApp</title>
-    <base href="/"/>
+    <base href="/" />
 
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="REMOJU">
-    <meta name="google-site-verification" content="iWRnQS517K5JkGjblw9h-uDzgnqxYRTyvR7dTFmaXJo"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="REMOJU" />
+    <meta
+      name="google-site-verification"
+      content="iWRnQS517K5JkGjblw9h-uDzgnqxYRTyvR7dTFmaXJo"
+    />
+    <meta name="theme-color" content="#dcdcdc" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <!--
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet"/>
 
@@ -21,21 +28,33 @@
 
     <script async defer src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet"/>
-    <meta name="theme-color" content="#1976d2"/>
-    <link rel="manifest" href="manifest.webmanifest">
-    <script async defer src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
-    integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
-    crossorigin="anonymous"></script>
-    <meta name="theme-color" content="#1976d2">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="theme-color" content="#1976d2" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <script
+      async
+      defer
+      src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
+      integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
+      crossorigin="anonymous"
+    ></script>
+    <meta name="theme-color" content="#1976d2" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WD8D3WTZS4"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WD8D3WTZS4"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       //gtag('js', new Date());
     </script>
-</head>
+  </head>
 
   <body id="body">
     <app-root>
@@ -77,6 +96,8 @@
       <span class="loader-text">Loading...</span> -->
     </app-root>
     <app-inline-style></app-inline-style>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
   </body>
 </html>
