meta theme-color

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       name="google-site-verification"
       content="iWRnQS517K5JkGjblw9h-uDzgnqxYRTyvR7dTFmaXJo"
     />
-    <meta name="theme-color" content="#dcdcdc" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <!--
