--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
       //gtag('js', new Date());
     </script>
 
-    <script>
+    <!-- <script>
       (function (d) {
         var config = {
             kitId: "ftg2jkn",
@@ -85,7 +85,7 @@
         };
         s.parentNode.insertBefore(tk, s);
       })(document);
-    </script>
+    </script> -->
   </head>
 
   <body id="body">
