--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       crossorigin="anonymous"
     ></script>
     <meta name="theme-color" content="#1976d2" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics OLD-->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-WD8D3WTZS4"
@@ -53,6 +53,21 @@
         dataLayer.push(arguments);
       }
       //gtag('js', new Date());
+    </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-ENJ5JXZXFX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-ENJ5JXZXFX");
     </script>
 
     <!-- <script>
