--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,14 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-WD8D3WTZS4"
     ></script>
     <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-WD8D3WTZS4');
-</script>
+      gtag("config", "G-WD8D3WTZS4");
+    </script>
 
     <!-- Google tag (gtag.js) -->
     <script
