--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-ENJ5JXZXFX"
+      src="https://www.googletagmanager.com/gtag/js?id=G-PYG65GTR52"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -69,7 +69,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-ENJ5JXZXFX");
+      gtag("config", "G-PYG65GTR52");
     </script>
 
     <!-- <script>
