構造化データを使用してサイト名を追加する

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,17 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>RemojuApp</title>
+    <title>おでかけ検索はリモージュ</title>
     <base href="/" />
-
+    <script type="application/ld+json">
+      {
+        "@context" : "https://schema.org",
+        "@type" : "WebSite",
+        "name" : "remoju",
+        "alternateName" : ["おでかけ検索はリモージュ","Remoju","remoju"],
+        "url" : "https://www.remoju.com/"
+      }
+    </script>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
