--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8" />
-    <title>おでかけ検索はリモージュ</title>
-    <base href="/" />
-    <script type="application/ld+json">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="description"
+    content="「おでかけ検索サイト」 みんなのおすすめを見ながら、オリジナルのベストな休日・旅行プランが作れちゃう！ 行き先を見つけて、経路・最短ルートを検索、マップ付きしおりを持っておでかけして、みんなにも共有! 楽しい休日はRemojuがサポートします。">
+  <meta name="keywords" content="おでかけ,お出かけ,スポット,旅行プラン,モデルコース,女子旅">
+  <meta name="jalcms" content="responsive" />
+  <meta property="og:url" content="https://www.remoju.com/ja/">
+  <meta property="og:locale" content="ja_JP">
+  <meta property="og:title" content="おでかけ検索はリモージュ｜次のお休み・旅行を計画しよう！- Remoju">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://www.remoju.com/favicon.ico">
+  <meta property="og:site_name" content="おでかけ検索はリモージュ｜次のお休み・旅行を計画しよう！- Remoju">
+  <meta property="og:description"
+    content="「おでかけ検索サイト」 みんなのおすすめを見ながら、オリジナルのベストな休日・旅行プランが作れちゃう！ 行き先を見つけて、経路・最短ルートを検索、マップ付きしおりを持っておでかけして、みんなにも共有! 楽しい休日はRemojuがサポートします。">
+  <title>おでかけ検索はリモージュ｜次のお休み・旅行を計画しよう！- Remoju</title>
+  <base href="/" />
+  <script type="application/ld+json">
       {
         "@context" : "https://schema.org",
         "@type" : "WebSite",
@@ -13,21 +26,15 @@
         "url" : "https://www.remoju.com/"
       }
     </script>
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
-    />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="REMOJU" />
-    <meta
-      name="google-site-verification"
-      content="iWRnQS517K5JkGjblw9h-uDzgnqxYRTyvR7dTFmaXJo"
-    />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <!--
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="REMOJU" />
+  <meta name="google-site-verification" content="iWRnQS517K5JkGjblw9h-uDzgnqxYRTyvR7dTFmaXJo" />
+  <meta name="theme-color" content="#ffffff" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+  <!--
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet"/>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" rel="stylesheet"/>
@@ -36,51 +43,38 @@
 
     <script async defer src="https://cdn.jsdelivr.net/npm/exif-js"></script>
     -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
-      rel="stylesheet"
-    />
-    <meta name="theme-color" content="#1976d2" />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <script
-      async
-      defer
-      src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
-      integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
-      crossorigin="anonymous"
-    ></script>
-    <meta name="theme-color" content="#1976d2" />
-    <!-- Global site tag (gtag.js) - Google Analytics OLD-->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-WD8D3WTZS4"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet" />
+  <meta name="theme-color" content="#1976d2" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <script async defer src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
+    integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
+    crossorigin="anonymous"></script>
+  <meta name="theme-color" content="#1976d2" />
+  <!-- Global site tag (gtag.js) - Google Analytics OLD-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WD8D3WTZS4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-      gtag("config", "G-WD8D3WTZS4");
-    </script>
+    gtag("config", "G-WD8D3WTZS4");
+  </script>
 
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-PYG65GTR52"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYG65GTR52"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-      gtag("config", "G-PYG65GTR52");
-    </script>
+    gtag("config", "G-PYG65GTR52");
+  </script>
 
-    <!-- <script>
+  <!-- <script>
       (function (d) {
         var config = {
             kitId: "ftg2jkn",
@@ -111,51 +105,49 @@
         s.parentNode.insertBefore(tk, s);
       })(document);
     </script> -->
-  </head>
+</head>
 
-  <body id="body">
-    <app-root>
-      <style>
-        app-root {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
-          color: gray;
+<body id="body">
+  <app-root>
+    <style>
+      app-root {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        color: gray;
+      }
+
+      .loader {
+        border: 1px solid #f3f3f3;
+        border-top: 1px solid #4055ae;
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
         }
 
-        .loader {
-          border: 1px solid #f3f3f3;
-          border-top: 1px solid #4055ae;
-          border-radius: 50%;
-          width: 120px;
-          height: 120px;
-          animation: spin 2s linear infinite;
+        100% {
+          transform: rotate(360deg);
         }
+      }
 
-        @keyframes spin {
-          0% {
-            transform: rotate(0deg);
-          }
-
-          100% {
-            transform: rotate(360deg);
-          }
-        }
-
-        .loader-text {
-          display: block;
-          margin-top: 1em;
-        }
-
-      </style>
-      <!-- <div class="loader"></div>
+      .loader-text {
+        display: block;
+        margin-top: 1em;
+      }
+    </style>
+    <!-- <div class="loader"></div>
       <span class="loader-text">Loading...</span> -->
-    </app-root>
-    <app-inline-style></app-inline-style>
-    <noscript
-      >Please enable JavaScript to continue using this application.</noscript
-    >
-  </body>
+  </app-root>
+  <app-inline-style></app-inline-style>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+</body>
+
 </html>
