alternateNameを一部変更

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         "@context" : "https://schema.org",
         "@type" : "WebSite",
         "name" : "remoju",
-        "alternateName" : ["おでかけ検索はリモージュ","Remoju","remoju"],
+        "alternateName" : ["おでかけ検索は、リモージュ - Remoju","Remoju","remoju"],
         "url" : "https://www.remoju.com/"
       }
     </script>
