--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         "@context" : "https://schema.org",
         "@type" : "WebSite",
         "name" : "remoju",
-        "alternateName" : ["おでかけ検索は、リモージュ - Remoju","Remoju","remoju"],
+        "alternateName" : ["おでかけ検索は、リモージュ｜次のお休み・旅行を計画しよう！- remoju","Remoju","remoju"],
         "url" : "https://www.remoju.com/"
       }
     </script>
