--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         "@type" : "WebSite",
         "name" : "remoju",
         "alternateName" : ["おでかけ検索は、リモージュ｜次のお休み・旅行を計画しよう！- remoju","Remoju","remoju"],
-        "url" : "https://www.remoju.com/"
+        "url" : "https://www.remoju.com/ja/"
       }
     </script>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
