JSON-LD タイトル名記述方法修正

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
   <meta property="og:site_name" content="おでかけ検索は、リモージュ｜次のお休み・旅行を計画しよう！- remoju">
   <meta property="og:description"
     content="【どこいく？】 みんなのおススメから、休日・旅行プランが作れます！行き先を見つけて、経路や最短ルートを自動検索、マップ付で、みんなにも共有。特集は女子旅">
-  <title>おでかけ検索は、リモージュ｜次のお休み・旅行を計画しよう！</title>
+  <title>おでかけ検索は、リモージュ 次のお休み・旅行を計画しよう！</title>
   <base href="/" />
   <script type="application/ld+json">
       {
         "@context" : "https://schema.org",
         "@type" : "WebSite",
-        "name" : "おでかけ検索は、リモージュ｜次のお休み・旅行を計画しよう！",
+        "name" : "おでかけ検索は、リモージュ 次のお休み・旅行を計画しよう！",
         "alternateName" : ["Remoju","remoju"],
         "url" : "https://www.remoju.com/ja/"
       }
