--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         "@context" : "https://schema.org",
         "@type" : "WebSite",
         "name" : "おでかけ検索は、リモージュ 次のお休み・旅行を計画しよう！",
-        "alternateName" : ["Remoju","remoju"],
+        "alternateName" : ["おでかけ検索は、リモージュ 次のお休み・旅行を計画しよう！","Remoju","remoju"],
         "url" : "https://www.remoju.com/ja/"
       }
     </script>
