--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
       {
         "@context" : "https://schema.org",
         "@type" : "WebSite",
-        "name" : "おでかけ検索は、リモージュ 次のお休み・旅行を計画しよう！",
-        "alternateName" : ["おでかけ検索は、リモージュ 次のお休み・旅行を計画しよう！","Remoju","remoju"],
+        "name" : "remoju",
+        "alternateName" : "おでかけ検索は、リモージュ 次のお休み・旅行を計画しよう！",
         "url" : "https://www.remoju.com/ja/"
       }
     </script>
