meta titleを動的に、html langを削除

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 
 <head>
   <meta charset="utf-8" />
   <meta name="description" content="【どこいく？】 みんなのおススメから、休日・旅行プランが作れます！行き先を見つけて、経路や最短ルートを自動検索、マップ付で、みんなにも共有。特集は女子旅">
   <meta name="keywords" content="おでかけ,お出かけ,おすすめスポット,旅行プラン,モデルコース,女子旅">
   <meta property="og:url" content="https://www.remoju.com/">
-  <meta property="og:title" content="おでかけ検索は、リモージュ | 次のお休み・旅行を計画しよう！">
+  <meta property="og:title" content="おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.remoju.com/favicon.ico">
-  <meta property="og:site_name" content="おでかけ検索は、リモージュ | 次のお休み・旅行を計画しよう！">
+  <meta property="og:site_name" content="おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！">
   <meta property="og:description"
     content="【どこいく？】 みんなのおススメから、休日・旅行プランが作れます！行き先を見つけて、経路や最短ルートを自動検索、マップ付で、みんなにも共有。特集は女子旅">
-  <title>おでかけ検索は、リモージュ | 次のお休み・旅行を計画しよう！</title>
+  <title>おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！</title>
   <base href="/" />
   <script type="application/ld+json">
       {
