--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
   <meta charset="utf-8" />
@@ -9,7 +9,7 @@
   <meta property="og:title" content="おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.remoju.com/favicon.ico">
-  <meta property="og:site_name" content="おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！">
+  <meta property="og:site_name" content="おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！！">
   <meta property="og:description"
     content="【どこいく？】 みんなのおススメから、休日・旅行プランが作れます！行き先を見つけて、経路や最短ルートを自動検索、マップ付で、みんなにも共有。特集は女子旅">
   <title>おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！</title>
@@ -18,6 +18,8 @@
       {
         "@context" : "https://schema.org",
         "@type" : "WebSite",
+        "name" : "おでかけ検索は、リモージュ | remoju 次のお休み・旅行を計画しよう！",
+        "alternateName" : ["remoju","Remoju"],
         "url" : "https://www.remoju.com/",
         "logo" : "https:\/\/www.remoju.com\/src\/assets\/img\/remoju-logo-b.svg"
       }
